<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.example.imagesearchapp.data.remote.imageSearch.request.ImageSearchRequestSort" />

        <import type="android.view.View" />

        <variable
            name="imageSearchViewModel"
            type="com.example.imagesearchapp.ui.imageSearch.ImageSearchViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.imageSearch.ImageSearchActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_scrollFlags="scroll|enterAlways"
                app:subtitleTextColor="@color/textColorPrimary"
                app:titleTextColor="@color/textColorPrimary">

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/searchView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:theme="@style/Theme.ImageSearchApp"
                    app:closeIcon="@drawable/ic_close"
                    app:searchHintIcon="@null"
                    app:searchIcon="@drawable/ic_search"
                    app:queryHint="@string/hint_search_form" />

            </androidx.appcompat.widget.Toolbar>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/toggleButtonConstraintLayout"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar">

                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/sortToggleButtonGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginEnd="8dp"
                    app:checkedButton="@id/sortToggleAccuracyButton"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:selectionRequired="true"
                    app:singleSelection="true">

                    <Button
                        android:id="@+id/sortToggleAccuracyButton"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="8dp"
                        android:onClick="@{() -> imageSearchViewModel.toggleImageSortType(ImageSearchRequestSort.ACCURACY)}"
                        android:text="@string/text_image_sort_type_accuracy"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/button6"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/sortToggleRecencyButton"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:onClick="@{() -> imageSearchViewModel.toggleImageSortType(ImageSearchRequestSort.RECENCY)}"
                        android:text="@string/text_image_sort_type_recency"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </com.google.android.material.button.MaterialButtonToggleGroup>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/documentListConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="@{(imageSearchViewModel.documents != null &amp;&amp; imageSearchViewModel.documents.size() != 0) ? View.VISIBLE : View.INVISIBLE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:listData="@{imageSearchViewModel.documents}"
                tools:itemCount="3"
                tools:listitem="@layout/item_image">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/beforeSearchEmptyListTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/text_image_list_view_empty"
                android:textSize="20sp"
                android:visibility="@{imageSearchViewModel.documents == null ? View.VISIBLE : View.INVISIBLE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/recyclerView" />

            <TextView
                android:id="@+id/successEmptyResultTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/success_image_search_empty_result"
                android:textSize="20sp"
                android:visibility="@{(imageSearchViewModel.documents != null &amp;&amp; imageSearchViewModel.documents.size() == 0) ? View.VISIBLE : View.INVISIBLE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/recyclerView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>